languages/html/umc_html_parser/src/implement/snapshots/umc_html__implement__test__basic_html.snap
---
source: languages/html/umc_html_parser/src/implement/mod.rs
expression: parse(HTML)
---
Nodes: [
    Doctype(
        Doctype {
            span: Span {
                start: 0,
                end: 15,
            },
            attributes: [
                Attribute {
                    key: "html",
                    value: "",
                },
            ],
        },
    ),
    Text(
        Text {
            span: Span {
                start: 15,
                end: 16,
            },
            value: "\n",
        },
    ),
    Element(
        Element {
            span: Span {
                start: 16,
                end: 142,
            },
            tag_name: "html",
            attributes: [
                Attribute {
                    key: "lang",
                    value: "en",
                },
            ],
            children: [
                Text(
                    Text {
                        span: Span {
                            start: 32,
                            end: 33,
                        },
                        value: "\n",
                    },
                ),
                Element(
                    Element {
                        span: Span {
                            start: 33,
                            end: 98,
                        },
                        tag_name: "head",
                        attributes: [],
                        children: [
                            Text(
                                Text {
                                    span: Span {
                                        start: 39,
                                        end: 42,
                                    },
                                    value: "\n  ",
                                },
                            ),
                            Element(
                                Element {
                                    span: Span {
                                        start: 42,
                                        end: 64,
                                    },
                                    tag_name: "meta",
                                    attributes: [
                                        Attribute {
                                            key: "charset",
                                            value: "UTF-8",
                                        },
                                    ],
                                    children: [],
                                },
                            ),
                            Text(
                                Text {
                                    span: Span {
                                        start: 64,
                                        end: 67,
                                    },
                                    value: "\n  ",
                                },
                            ),
                            Element(
                                Element {
                                    span: Span {
                                        start: 67,
                                        end: 90,
                                    },
                                    tag_name: "title",
                                    attributes: [],
                                    children: [
                                        Text(
                                            Text {
                                                span: Span {
                                                    start: 74,
                                                    end: 82,
                                                },
                                                value: "Document",
                                            },
                                        ),
                                    ],
                                },
                            ),
                            Text(
                                Text {
                                    span: Span {
                                        start: 90,
                                        end: 91,
                                    },
                                    value: "\n",
                                },
                            ),
                        ],
                    },
                ),
                Text(
                    Text {
                        span: Span {
                            start: 98,
                            end: 99,
                        },
                        value: "\n",
                    },
                ),
                Element(
                    Element {
                        span: Span {
                            start: 99,
                            end: 134,
                        },
                        tag_name: "body",
                        attributes: [],
                        children: [
                            Text(
                                Text {
                                    span: Span {
                                        start: 105,
                                        end: 108,
                                    },
                                    value: "\n  ",
                                },
                            ),
                            Element(
                                Element {
                                    span: Span {
                                        start: 108,
                                        end: 126,
                                    },
                                    tag_name: "p",
                                    attributes: [],
                                    children: [
                                        Text(
                                            Text {
                                                span: Span {
                                                    start: 111,
                                                    end: 122,
                                                },
                                                value: "Hello World",
                                            },
                                        ),
                                    ],
                                },
                            ),
                            Text(
                                Text {
                                    span: Span {
                                        start: 126,
                                        end: 127,
                                    },
                                    value: "\n",
                                },
                            ),
                        ],
                    },
                ),
                Text(
                    Text {
                        span: Span {
                            start: 134,
                            end: 135,
                        },
                        value: "\n",
                    },
                ),
            ],
        },
    ),
]
Errors: []
