languages/html/umc_html_parser/src/implement/snapshots/umc_html__implement__test__comments.snap
---
source: languages/html/umc_html_parser/src/implement/mod.rs
expression: parse(HTML)
---
Nodes: [
    Comment(
        Comment {
            span: Span {
                start: 0,
                end: 26,
            },
            bogus: false,
            value: " This is a comment ",
        },
    ),
    Text(
        Text {
            span: Span {
                start: 26,
                end: 27,
            },
            value: "\n",
        },
    ),
    Element(
        Element {
            span: Span {
                start: 27,
                end: 45,
            },
            tag_name: "div",
            attributes: [],
            children: [
                Text(
                    Text {
                        span: Span {
                            start: 32,
                            end: 39,
                        },
                        value: "Content",
                    },
                ),
            ],
        },
    ),
    Text(
        Text {
            span: Span {
                start: 45,
                end: 46,
            },
            value: "\n",
        },
    ),
    Comment(
        Comment {
            span: Span {
                start: 46,
                end: 70,
            },
            bogus: false,
            value: " Another comment ",
        },
    ),
]
Errors: []
