languages/html/umc_html_parser/src/implement/snapshots/umc_html__implement__test__nested_elements.snap
---
source: languages/html/umc_html_parser/src/implement/mod.rs
expression: parse(HTML)
---
Nodes: [
    Element(
        Element {
            span: Span {
                start: 0,
                end: 54,
            },
            tag_name: "div",
            attributes: [],
            children: [
                Text(
                    Text {
                        span: Span {
                            start: 5,
                            end: 8,
                        },
                        value: "\n  ",
                    },
                ),
                Element(
                    Element {
                        span: Span {
                            start: 8,
                            end: 26,
                        },
                        tag_name: "p",
                        attributes: [],
                        children: [
                            Text(
                                Text {
                                    span: Span {
                                        start: 11,
                                        end: 22,
                                    },
                                    value: "Paragraph 1",
                                },
                            ),
                        ],
                    },
                ),
                Text(
                    Text {
                        span: Span {
                            start: 26,
                            end: 29,
                        },
                        value: "\n  ",
                    },
                ),
                Element(
                    Element {
                        span: Span {
                            start: 29,
                            end: 47,
                        },
                        tag_name: "p",
                        attributes: [],
                        children: [
                            Text(
                                Text {
                                    span: Span {
                                        start: 32,
                                        end: 43,
                                    },
                                    value: "Paragraph 2",
                                },
                            ),
                        ],
                    },
                ),
                Text(
                    Text {
                        span: Span {
                            start: 47,
                            end: 48,
                        },
                        value: "\n",
                    },
                ),
            ],
        },
    ),
]
Errors: []
